Cria a função que da funionalidade ao alura-fone

--- a/javascript/alura-fone/style.css
+++ b/javascript/alura-fone/style.css
@@ -47,6 +47,10 @@ input[type=button] {
   width: 80px;
 }
 
+input[type=button]:hover {
+  background-color: yellow;
+}
+
 input[type=tel] {
   background-color: #cccccc;
   border-radius: 10px;
